fix bug menu not showing

--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,7 @@ h2 {
     position: absolute;
     background-color: var(--grey);
     width: 175px;
-    z-index: 1;
+    z-index: 10;
     top: 48px;
     margin: 0;
     padding: 0;
@@ -108,7 +108,7 @@ h2 {
     opacity: 0.5;
     width: 100%;
     height: 518px;
-}s
+}
 
 .menu-links.show, .menu-bg.show {
     display: block;
